--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -81,7 +81,7 @@ android:layout_below="@id/actionbar"
 	   	android:id="@+id/date_header"
 	   	android:layout_width="fill_parent"
 	   	android:layout_height="wrap_content"
-	   	android:text="Wprowadź imię oraz nazwisko"
+	   	android:text="Imię i/lub nazwisko osoby zmarłej"
 	   	/>
 	<LinearLayout
 		android:layout_width="fill_parent"
@@ -96,6 +96,8 @@ android:layout_below="@id/actionbar"
 	   	android:hint="Imię"
 	   	android:text=""
 	    android:singleLine="true"
+	    android:nextFocusDown="@+id/surname"
+	    android:imeOptions="actionNext"
 	   	
    	/>
    	<EditText 
@@ -127,7 +129,7 @@ android:layout_below="@id/actionbar"
 	   	android:id="@+id/necropolis_header"
 	   	android:layout_width="fill_parent"
 	   	android:layout_height="wrap_content"
-	   	android:text="Wybierz cmentarz"/>
+	   	android:text="Cmentarz"/>
    	<Spinner 
 	   	android:paddingTop="5dp"
 	   	android:id="@+id/necropolis_spinner"
@@ -136,9 +138,23 @@ android:layout_below="@id/actionbar"
 	   	android:prompt="@string/necropolis_prompt"
    	/>
    	</LinearLayout>
-   	<LinearLayout 
+   	
+	<RelativeLayout 
+		android:id="@+id/datechoose"
+		android:layout_width="fill_parent"
+	   	android:layout_height="wrap_content"
+	   	
+	   	>
+	   		<CheckBox  android:id="@+id/checkbox"
+   	 android:layout_width="wrap_content"
+   	  android:layout_height="wrap_content"
+   	  android:layout_marginLeft="10dp"
+   	  android:text="Dodatkowe opcje wyszukiwania"
+   	  ></CheckBox>
+	<LinearLayout 
    		android:id="@+id/date_choose_header"
-	   	android:layout_below="@id/necropolis_choose"
+	   	android:layout_below="@id/necropolis_spinner"
+	   	android:layout_toRightOf="@id/checkbox"
 	   	android:layout_width="fill_parent"
 	   	android:layout_height="wrap_content"
 	   	android:paddingTop="5dp"
@@ -146,12 +162,13 @@ android:layout_below="@id/actionbar"
 	   	android:paddingRight="10dp"
 	   	android:paddingBottom="5dp"
 	   	android:orientation="horizontal"
+	   	android:visibility="gone"
    	>
    	<TextView 
 	   	android:id="@+id/date_header"
 	   	android:layout_width="wrap_content"
 	   	android:layout_height="wrap_content"
-	   	android:text="Wybierz datę: "/> 
+	   	android:text="Data: "/> 
 	<TextView
 		android:id="@+id/birth_date"
 		android:clickable="true"
@@ -197,27 +214,20 @@ android:layout_below="@id/actionbar"
 		android:paddingBottom="3dp"
 		android:textStyle="bold"
 		android:layout_height="wrap_content"></TextView>
-		
+			
 	</LinearLayout>
-	<LinearLayout 
-		android:id="@+id/datechoose"
-		android:layout_width="fill_parent"
-	   	android:layout_height="wrap_content"
-	   	android:layout_below="@id/date_choose_header">
-   	<CheckBox  android:id="@+id/checkbox"
-   	 android:layout_width="wrap_content"
-   	  android:layout_height="wrap_content"
-   	  android:layout_marginLeft="10dp"
-   	  android:text="Pokaż wybór daty"
-   	  ></CheckBox>
-   	<DatePicker 
-	   	android:paddingTop="5dp"
+	<DatePicker 
 	   	android:id="@+id/datepicker"
 	   	android:layout_width="fill_parent"
 	   	android:layout_height="wrap_content"
+	   	android:layout_below="@id/date_choose_header"
 	   	android:visibility="gone"
+	   	android:paddingTop="10dp"
+	   	
    	/>
-   	</LinearLayout>
+   
+   
+   	</RelativeLayout>
  
    	<RelativeLayout 
    		android:id="@+id/buttons"
@@ -246,20 +256,16 @@ android:layout_below="@id/actionbar"
 	>
 	<TextView 
 		android:id="@+id/tv_poweredby"
-		android:layout_height="fill_parent"
+		android:layout_height="wrap_content"
 		android:layout_width="wrap_content"
 		android:textSize="20dp"
-		android:paddingTop="20dp"
 		android:paddingLeft="10dp"
 		android:background="@color/white"
-		android:text="dane z"/>
+		android:text="Dane z API "/>
 	<ImageView 
 		android:layout_toRightOf="@id/tv_poweredby"
 		android:id="@+id/poznanapi"
-		android:paddingLeft="20dp"
-		android:paddingRight="20dp"
-		android:paddingBottom="20dp"
-		android:layout_height="fill_parent"
+		android:layout_height="30dp"
 		android:layout_width="wrap_content"
 		android:background="@color/white"
 		android:src="@drawable/poznan"/>
