--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,6 +5,7 @@
     android:layout_width="fill_parent"
     
     android:layout_height="fill_parent"
+   
     
     >
   
@@ -47,13 +48,15 @@
 android:layout_below="@id/actionbar"
  android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@android:color/white"
+    android:background="@drawable/background"
+    android:isScrollContainer="false"
 >   	  
 	<RelativeLayout 
 		android:id="@+id/all"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		android:layout_below="@id/actionbar"
+		android:paddingBottom="20dp"
 		
 	>
 	  
@@ -109,6 +112,7 @@ android:layout_below="@id/actionbar"
 	   	android:hint="Nazwisko"
 	   	android:singleLine="true"
 	   	android:text=""
+	   	android:imeOptions="actionDone"
 	   
    	/>
    	</LinearLayout>
@@ -118,7 +122,7 @@ android:layout_below="@id/actionbar"
 	   	android:layout_below="@id/actionbar"
 	   	android:layout_width="fill_parent"
 	   	android:layout_height="wrap_content"
-	   	android:paddingTop="10dp"
+	   	android:paddingTop="5dp"
 	   	android:paddingLeft="10dp"
 	   	android:paddingRight="10dp"
 	   	android:paddingBottom="5dp"
@@ -233,7 +237,10 @@ android:layout_below="@id/actionbar"
    		android:id="@+id/buttons"
 	   	android:layout_width="fill_parent"
 	   	android:layout_height="wrap_content"
-	   	android:padding="10dp"
+	   	android:paddingBottom="10dp"
+	   	android:paddingLeft="10dp"
+	   	android:paddingTop="5dp"
+	   	android:paddingRight="10dp"
 	    android:layout_alignParentBottom="true"
 
    	><!-- 	    android:layout_below="@id/surname" -->
@@ -248,17 +255,27 @@ android:layout_below="@id/actionbar"
    		android:text="  Szukaj"  />
 </RelativeLayout>
 
- <RelativeLayout 
+
+   
+</LinearLayout> 
+ 	
+
+</RelativeLayout> 
+</ScrollView> 
+  <RelativeLayout 
 	android:layout_width="fill_parent"
-	android:layout_height="80px"
-	android:layout_below="@id/all"
+	android:layout_height="30dp"
 	android:layout_alignParentBottom="true"
+	
+
 	>
 	<TextView 
 		android:id="@+id/tv_poweredby"
-		android:layout_height="wrap_content"
+		android:layout_height="fill_parent"
 		android:layout_width="wrap_content"
 		android:textSize="20dp"
+		android:layout_centerVertical="true"
+		android:layout_alignParentLeft="true"
 		android:paddingLeft="10dp"
 		android:background="@color/white"
 		android:text="Dane z API "/>
@@ -269,12 +286,6 @@ android:layout_below="@id/actionbar"
 		android:layout_width="wrap_content"
 		android:background="@color/white"
 		android:src="@drawable/poznan"/>
-	</RelativeLayout>
-   
-</LinearLayout> 
-   	
-
-</RelativeLayout> 
-</ScrollView>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
+	</RelativeLayout>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 </RelativeLayout>
 
