--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -7,7 +7,7 @@
      	android:layout_width="fill_parent"
      	android:layout_height="110dp"
      	android:layout_alignParentTop="true"
-     	android:background="@android:drawable/screen_background_dark_transparent"
+     	android:background="@android:drawable/screen_background_light_transparent"
      	
      >
 <!--      ARROW_LEFT -->
@@ -29,7 +29,8 @@
     android:typeface="sans"
     android:padding="5dp"
     android:textSize="20sp"
-    android:textStyle="bold" >
+    android:textStyle="bold"
+ 	 >
 </TextView>
 
 
@@ -39,7 +40,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/map_surname_name"
-    android:padding="1dp"
+    android:padding="2dp"
     android:textStyle="bold"
     android:typeface="sans"
     android:textSize="18sp" />
@@ -50,6 +51,7 @@
 	android:layout_below="@id/map_value_cementry"
 	android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:padding="2dp"
     android:text="ur. "
 	>
 </TextView>
@@ -61,6 +63,7 @@
 	android:layout_alignParentRight="true"
 	android:layout_below="@id/map_surname_name"
 	android:textStyle="bold"
+	android:paddingRight="2dp"
 	/>
 <TextView 
 	android:id="@+id/map_quater_header"
@@ -74,7 +77,9 @@
 	
 <!-- RZAD -->
 <TextView 
+	
 	android:id="@+id/map_row_value"
+	android:paddingRight="2dp"
 	android:layout_height="wrap_content"
 	android:layout_width="wrap_content"
 	android:layout_alignParentRight="true"
@@ -93,6 +98,7 @@
 <!-- POLE -->
 <TextView 
 	android:id="@+id/map_field_value"
+	android:paddingRight="2dp"
 	android:layout_height="wrap_content"
 	android:layout_width="wrap_content"
 	android:layout_alignParentRight="true"
@@ -110,6 +116,7 @@
 	/>
 <TextView
 	android:id="@+id/map_value_dateBirth"
+	
 	android:layout_toRightOf="@id/map_header_dateBirth"
 	android:layout_below="@id/map_value_cementry"
 	android:layout_width="wrap_content"
@@ -122,6 +129,7 @@
 <TextView
 	android:id="@+id/map_header_dateDeath"
 	android:layout_width="wrap_content"
+	android:paddingLeft="2dp"
 	android:layout_below="@id/map_header_dateBirth"
     android:layout_height="wrap_content"
     android:text="zm. "
@@ -140,6 +148,7 @@
 <TextView
 
 	android:id="@+id/map_header_dateBurial"
+	android:paddingLeft="2dp"
 	android:layout_below="@id/map_header_dateDeath"
 	android:layout_width="wrap_content"
 	
